[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/visuals/crayola_rig.gd" id="1_rig"]

[node name="CrayolaRig" type="Node2D"]
script = ExtResource("1_rig")

[node name="Skeleton2D" type="Skeleton2D" parent="."]

[node name="StomachPivot" type="Bone2D" parent="Skeleton2D"]
position = Vector2(0, -480)
rest = Transform2D(1, 0, 0, 1, 0, -480)
auto_calculate_length_and_angle = false
length = 50.0
bone_angle = 1.5708

[node name="Stomach" type="Sprite2D" parent="Skeleton2D/StomachPivot"]
position = Vector2(-50, -160)
scale = Vector2(10, 10)
centered = false
z_index = 4

[node name="ChestPivot" type="Bone2D" parent="Skeleton2D/StomachPivot"]
position = Vector2(0, 0)
rest = Transform2D(1, 0, 0, 1, 0, 0)
auto_calculate_length_and_angle = false
length = 80.0
bone_angle = -1.5708

[node name="Chest" type="Sprite2D" parent="Skeleton2D/StomachPivot/ChestPivot"]
position = Vector2(-50, -160)
scale = Vector2(10, 10)
centered = false
z_index = 6

[node name="NeckPivot" type="Bone2D" parent="Skeleton2D/StomachPivot/ChestPivot"]
position = Vector2(-10, -80)
rest = Transform2D(1, 0, 0, 1, -10, -80)
auto_calculate_length_and_angle = false
length = 20.0
bone_angle = -1.5708

[node name="Neck" type="Sprite2D" parent="Skeleton2D/StomachPivot/ChestPivot/NeckPivot"]
position = Vector2(-40, -80)
scale = Vector2(10, 10)
centered = false
z_index = 5

[node name="HeadPivot" type="Bone2D" parent="Skeleton2D/StomachPivot/ChestPivot/NeckPivot"]
position = Vector2(0, -20)
rest = Transform2D(1, 0, 0, 1, 0, -20)
auto_calculate_length_and_angle = false
length = 60.0
bone_angle = -1.5708

[node name="Head" type="Sprite2D" parent="Skeleton2D/StomachPivot/ChestPivot/NeckPivot/HeadPivot"]
position = Vector2(-40, -60)
scale = Vector2(10, 10)
centered = false
z_index = 7

[node name="FrontLegPivot" type="Bone2D" parent="Skeleton2D/StomachPivot"]
position = Vector2(-10, 60)
rest = Transform2D(1, 0, 0, 1, -10, 60)
auto_calculate_length_and_angle = false
length = 80.0
bone_angle = 1.5708

[node name="FrontLeg" type="Sprite2D" parent="Skeleton2D/StomachPivot/FrontLegPivot"]
position = Vector2(-40, -220)
scale = Vector2(10, 10)
centered = false
z_index = 9

[node name="FrontFootPivot" type="Bone2D" parent="Skeleton2D/StomachPivot/FrontLegPivot"]
position = Vector2(-10, 80)
rest = Transform2D(1, 0, 0, 1, -10, 80)
auto_calculate_length_and_angle = false
length = 40.0
bone_angle = 1.5708

[node name="FrontFoot" type="Sprite2D" parent="Skeleton2D/StomachPivot/FrontLegPivot/FrontFootPivot"]
position = Vector2(-30, -300)
scale = Vector2(10, 10)
centered = false
z_index = 8

[node name="BackLegPivot" type="Bone2D" parent="Skeleton2D/StomachPivot"]
position = Vector2(20, 70)
rest = Transform2D(1, 0, 0, 1, 20, 70)
auto_calculate_length_and_angle = false
length = 70.0
bone_angle = 1.5708

[node name="BackLeg" type="Sprite2D" parent="Skeleton2D/StomachPivot/BackLegPivot"]
position = Vector2(-70, -230)
scale = Vector2(10, 10)
centered = false
z_index = 3

[node name="BackFootPivot" type="Bone2D" parent="Skeleton2D/StomachPivot/BackLegPivot"]
position = Vector2(0, 70)
rest = Transform2D(1, 0, 0, 1, 0, 70)
auto_calculate_length_and_angle = false
length = 40.0
bone_angle = 1.5708

[node name="BackFoot" type="Sprite2D" parent="Skeleton2D/StomachPivot/BackLegPivot/BackFootPivot"]
position = Vector2(-70, -300)
scale = Vector2(10, 10)
centered = false
z_index = 2

[node name="FrontArmPivot" type="Bone2D" parent="Skeleton2D/StomachPivot/ChestPivot"]
position = Vector2(-30, -80)
rest = Transform2D(1, 0, 0, 1, -30, -80)
auto_calculate_length_and_angle = false
length = 80.0
bone_angle = 1.5708

[node name="FrontUpperArm" type="Sprite2D" parent="Skeleton2D/StomachPivot/ChestPivot/FrontArmPivot"]
position = Vector2(-20, -80)
scale = Vector2(10, 10)
centered = false
z_index = 11

[node name="FrontForearmPivot" type="Bone2D" parent="Skeleton2D/StomachPivot/ChestPivot/FrontArmPivot"]
position = Vector2(-10, 80)
rest = Transform2D(1, 0, 0, 1, -10, 80)
auto_calculate_length_and_angle = false
length = 60.0
bone_angle = 1.5708

[node name="FrontHand" type="Sprite2D" parent="Skeleton2D/StomachPivot/ChestPivot/FrontArmPivot/FrontForearmPivot"]
position = Vector2(-10, -160)
scale = Vector2(10, 10)
centered = false
z_index = 10

[node name="BackArmPivot" type="Bone2D" parent="Skeleton2D/StomachPivot/ChestPivot"]
position = Vector2(20, -80)
rest = Transform2D(1, 0, 0, 1, 20, -80)
auto_calculate_length_and_angle = false
length = 80.0
bone_angle = 1.5708

[node name="BackUpperArm" type="Sprite2D" parent="Skeleton2D/StomachPivot/ChestPivot/BackArmPivot"]
position = Vector2(-70, -80)
scale = Vector2(10, 10)
centered = false
z_index = 0

[node name="BackForearmPivot" type="Bone2D" parent="Skeleton2D/StomachPivot/ChestPivot/BackArmPivot"]
position = Vector2(10, 80)
rest = Transform2D(1, 0, 0, 1, 10, 80)
auto_calculate_length_and_angle = false
length = 60.0
bone_angle = 1.5708

[node name="BackHand" type="Sprite2D" parent="Skeleton2D/StomachPivot/ChestPivot/BackArmPivot/BackForearmPivot"]
position = Vector2(-80, -160)
scale = Vector2(10, 10)
centered = false
z_index = 1
